# rmath

./: CMakeLists.txt  LICENSE  Makefile  README.md
include/: matrix.h  matrix_rep.h
include/Matrix/: Matrix.h  MatrixRep.h
src/: matrix.hpp  matrix_rep.hpp
src/Matrix/: Matrix.hpp  MatrixRep.hpp
test/: CMakeLists.txt  test.cpp
test/Matrix/: Matrix.test.cpp  MatrixRep.test.cpp
